--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -378,7 +378,7 @@
             </property>
             <layout class="QGridLayout" name="gridLayout_6">
              <item row="0" column="0">
-              <widget class="QPlainTextEdit" name="plainTextEdit">
+              <widget class="QPlainTextEdit" name="stepLog">
                <property name="minimumSize">
                 <size>
                  <width>0</width>
@@ -617,8 +617,8 @@
            <string>Result</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
-           <item row="0" column="0" colspan="2">
-            <widget class="QTableView" name="tv"/>
+           <item row="0" column="0">
+            <widget class="QPlainTextEdit" name="result"/>
            </item>
           </layout>
          </widget>
@@ -1218,7 +1218,7 @@
      <x>0</x>
      <y>0</y>
      <width>876</width>
-     <height>23</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
