--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -13,8 +13,23 @@
   <property name="windowTitle">
    <string>Delphi Auto Test System</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_7">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
     <item row="0" column="0">
      <widget class="QWidget" name="widget_title" native="true">
       <property name="sizePolicy">
@@ -137,57 +152,35 @@
        <attribute name="title">
         <string>Main</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_4" rowstretch="1,0" columnstretch="2,1">
+       <layout class="QGridLayout" name="gridLayout_4" rowstretch="0,1" columnstretch="2,1">
         <item row="0" column="0">
-         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,0">
+         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1">
           <item>
            <widget class="QGroupBox" name="groupBox_3">
             <property name="title">
              <string>Control</string>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+            </property>
             <layout class="QGridLayout" name="gridLayout_3">
              <property name="verticalSpacing">
               <number>6</number>
              </property>
-             <item row="0" column="5">
-              <widget class="QPushButton" name="Go">
-               <property name="minimumSize">
+             <item row="0" column="6" rowspan="2">
+              <spacer name="horizontalSpacer_8">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
                 <size>
-                 <width>120</width>
-                 <height>0</height>
+                 <width>40</width>
+                 <height>20</height>
                 </size>
                </property>
-               <property name="maximumSize">
-                <size>
-                 <width>16777215</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>Anti-Clockwise</string>
-               </property>
-              </widget>
+              </spacer>
              </item>
-             <item row="0" column="3">
-              <widget class="QPushButton" name="btnAdClockwise">
-               <property name="minimumSize">
-                <size>
-                 <width>120</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <property name="maximumSize">
-                <size>
-                 <width>16777215</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>Clockwise</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="0" colspan="6">
+             <item row="1" column="0" colspan="6">
               <layout class="QHBoxLayout" name="horizontalLayout_4">
                <item>
                 <widget class="QPushButton" name="start">
@@ -298,22 +291,6 @@
                </item>
               </layout>
              </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="label_6">
-               <property name="minimumSize">
-                <size>
-                 <width>120</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <property name="toolTip">
-                <string>0~359</string>
-               </property>
-               <property name="text">
-                <string>Position Correction</string>
-               </property>
-              </widget>
-             </item>
              <item row="0" column="1">
               <widget class="QSpinBox" name="trim">
                <property name="sizePolicy">
@@ -336,56 +313,75 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="6">
-              <spacer name="horizontalSpacer_10">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>40</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-             <item row="2" column="6">
-              <spacer name="horizontalSpacer_8">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>40</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-            </layout>
-           </widget>
-          </item>
-          <item>
-           <widget class="QGroupBox" name="groupBox_6">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="title">
-             <string>Trace Log</string>
-            </property>
-            <layout class="QGridLayout" name="gridLayout_6">
              <item row="0" column="0">
-              <widget class="QPlainTextEdit" name="stepLog">
+              <widget class="QLabel" name="label_6">
                <property name="minimumSize">
                 <size>
-                 <width>0</width>
-                 <height>60</height>
+                 <width>120</width>
+                 <height>0</height>
                 </size>
                </property>
+               <property name="toolTip">
+                <string>0~359</string>
+               </property>
+               <property name="text">
+                <string>Position Correction</string>
+               </property>
               </widget>
+             </item>
+             <item row="0" column="5">
+              <widget class="QPushButton" name="Go">
+               <property name="minimumSize">
+                <size>
+                 <width>120</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Anti-Clockwise</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="3">
+              <widget class="QPushButton" name="btnAdClockwise">
+               <property name="minimumSize">
+                <size>
+                 <width>120</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Clockwise</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <spacer name="verticalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeType">
+                <enum>QSizePolicy::Expanding</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
              </item>
             </layout>
            </widget>
@@ -570,6 +566,9 @@
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
+             <property name="sizeType">
+              <enum>QSizePolicy::Expanding</enum>
+             </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
@@ -613,6 +612,12 @@
         </item>
         <item row="1" column="0" colspan="2">
          <widget class="QGroupBox" name="groupBox_4">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="title">
            <string>Result</string>
           </property>
