--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -410,77 +410,45 @@
            <property name="verticalSpacing">
             <number>6</number>
            </property>
-           <item row="2" column="4">
-            <widget class="QLabel" name="lblFailNbr">
-             <property name="toolTip">
-              <string>-359~359</string>
-             </property>
-             <property name="text">
-              <string>50000</string>
-             </property>
-            </widget>
-           </item>
            <item row="1" column="4">
-            <widget class="QLabel" name="lblTotalNbr_2">
+            <widget class="QLabel" name="left">
              <property name="toolTip">
               <string>-359~359</string>
              </property>
              <property name="text">
-              <string>50000</string>
+              <string/>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
-            <widget class="QLabel" name="lblPassNbr">
-             <property name="toolTip">
-              <string>-359~359</string>
-             </property>
-             <property name="text">
-              <string>50000</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QLabel" name="lblTotalNbr">
-             <property name="toolTip">
-              <string>-359~359</string>
-             </property>
-             <property name="text">
-              <string>50000</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_28">
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>0</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>16777215</height>
-              </size>
-             </property>
-             <property name="toolTip">
-              <string>-359~359</string>
-             </property>
-             <property name="text">
-              <string>Pass:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="3">
-            <widget class="QLabel" name="label_25">
-             <property name="toolTip">
-              <string>-359~359</string>
-             </property>
-             <property name="text">
-              <string>Left:</string>
-             </property>
-            </widget>
+           <item row="3" column="0" colspan="5">
+            <layout class="QHBoxLayout" name="horizontalLayout_5">
+             <item>
+              <spacer name="horizontalSpacer_6">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton">
+               <property name="minimumSize">
+                <size>
+                 <width>120</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Clear</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_21">
@@ -504,13 +472,13 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="3">
-            <widget class="QLabel" name="label_29">
+           <item row="1" column="1">
+            <widget class="QLabel" name="lblTotalNbr">
              <property name="toolTip">
               <string>-359~359</string>
              </property>
              <property name="text">
-              <string>Fail:</string>
+              <string>50000</string>
              </property>
             </widget>
            </item>
@@ -545,7 +513,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QProgressBar" name="progressBar">
+              <widget class="QProgressBar" name="pb">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                  <horstretch>0</horstretch>
@@ -571,7 +539,7 @@
              </item>
             </layout>
            </item>
-           <item row="3" column="0">
+           <item row="2" column="0">
             <spacer name="verticalSpacer_2">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
@@ -587,35 +555,15 @@
              </property>
             </spacer>
            </item>
-           <item row="4" column="0" colspan="5">
-            <layout class="QHBoxLayout" name="horizontalLayout_5">
-             <item>
-              <spacer name="horizontalSpacer_6">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>40</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-             <item>
-              <widget class="QPushButton" name="pushButton">
-               <property name="minimumSize">
-                <size>
-                 <width>120</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>Clear</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
+           <item row="1" column="3">
+            <widget class="QLabel" name="label_25">
+             <property name="toolTip">
+              <string>-359~359</string>
+             </property>
+             <property name="text">
+              <string>Left:</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
