--- a/ui/dialogconfig.ui
+++ b/ui/dialogconfig.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Interface Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -21,7 +21,7 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="2">
-       <widget class="QComboBox" name="comboBox"/>
+       <widget class="QComboBox" name="a"/>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label">
@@ -38,7 +38,7 @@
        </widget>
       </item>
       <item row="1" column="2">
-       <widget class="QComboBox" name="comboBox_2"/>
+       <widget class="QComboBox" name="b"/>
       </item>
       <item row="0" column="1">
        <spacer name="horizontalSpacer">
@@ -64,7 +64,14 @@
        </widget>
       </item>
       <item row="2" column="2">
-       <widget class="QComboBox" name="comboBox_3"/>
+       <widget class="QComboBox" name="c"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>Refresh</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
