--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -146,7 +146,7 @@
     <item row="1" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="main">
        <attribute name="title">
@@ -917,7 +917,7 @@
               </size>
              </property>
              <property name="text">
-              <string>30</string>
+              <string>45</string>
              </property>
             </widget>
            </item>
@@ -1124,6 +1124,9 @@
              <property name="text">
               <string/>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
              <property name="checked">
               <bool>true</bool>
              </property>
@@ -1172,6 +1175,9 @@
             <widget class="QCheckBox" name="k6">
              <property name="text">
               <string/>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
              <property name="checked">
               <bool>true</bool>
@@ -1222,6 +1228,9 @@
              <property name="text">
               <string/>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
              <property name="checked">
               <bool>true</bool>
              </property>
@@ -1239,7 +1248,7 @@
               </sizepolicy>
              </property>
              <property name="text">
-              <string>330</string>
+              <string>315</string>
              </property>
             </widget>
            </item>
@@ -1315,7 +1324,7 @@
      <x>0</x>
      <y>0</y>
      <width>876</width>
-     <height>25</height>
+     <height>23</height>
     </rect>
    </property>
   </widget>
